--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_C_STANDARD 11)
 find_package(Curses REQUIRED)
 include_directories(${CURSES_INCLUDE_DIR})
 
-add_executable(gameoflife main.c)
+add_executable(gameoflife main.c core/gameoflife.c core/gameoflife.h)
 
 target_link_libraries(gameoflife ${CURSES_LIBRARIES})
